// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders table component with all props 1`] = `
.c0 {
  width: 100%;
  border-radius: 0.4rem;
  box-shadow: 0 0 0 1px rgba(255,255,255,0.1);
}

.c0 tr:nth-child(even) {
  background-color: #1f1f23;
}

<table
  className="c0 tw-table"
/>
`;

exports[`Table renders table component with required props 1`] = `
.c0 {
  width: 100%;
  border-radius: 0.4rem;
  box-shadow: 0 0 0 1px rgba(255,255,255,0.1);
}

<table
  className="c0 tw-table"
/>
`;
